# shelltabs

./: .gitignore  AGENTS.md  CMakeLists.txt  DIRECTUI_REPLACEMENT_ARCHITECTURE.md  Hooking Windows Explorer’s Tree and List View Panes for Custom Drawing.docx  README.md  RIBBON_IMPLEMENTATION_SUMMARY.md  RIBBON_QUICK_START.md  ShellTabs.def  ShellTabs.reg  ShellTabsBand.rgs  ShellTabsTagColumnProvider.rgs  TODO.md  dead_code_report.md  resource.h
docs/: RIBBON_CUSTOMIZATION.md  RIBBON_INTEGRATION_EXAMPLE.md  background_cache.md  explorer_reference.md  manual_test_plan.md  pane_hooks_design.md  src_feature_audit.md  tab_seeding_audit.md  theme_transition.md
example_explorer_extensions/ClassicExplorer/: ClassicExplorer.vcxproj  ClassicExplorer.vcxproj.filters  ClassicExplorer_h.h  ClassicExplorer_i.c  ClassicExplorer_p.c  dlldata.c
example_explorer_extensions/Open-Shell-Menu-master/: .gitignore  README.md
example_explorer_extensions/Open-Shell-Menu-master/Src/: Common.props  OpenShell.sln
example_explorer_extensions/Open-Shell-Menu-master/Src/ClassicIE/: ClassicIE.vcxproj
example_explorer_extensions/Open-Shell-Menu-master/Src/Lib/: Lib.vcxproj
example_explorer_extensions/Open-Shell-Menu-master/Src/Setup/: BuildBinaries.bat  BuildInstaller.bat  Setup.cpp  Setup.rc  Setup.vcxproj  Setup.wxs
example_explorer_extensions/Open-Shell-Menu-master/Src/StartMenu/: StartMenu.vcxproj
example_explorer_extensions/qttabbar-master/: .gitignore  01build_release.bat  CHANGES.txt  QTTabBar Rebirth.sln  TODOS.txt  清理.bat
example_explorer_extensions/qttabbar-master/BandObjectLib/: BandObject.cs  BandObjectLib.csproj
example_explorer_extensions/qttabbar-master/BandObjectLib/Properties/: AssemblyInfo.cs
example_explorer_extensions/qttabbar-master/I18N/: Lng_QTTabBar_ru.xml
example_explorer_extensions/qttabbar-master/Installer/: Installer.wixproj  Installer.wxs
example_explorer_extensions/qttabbar-master/Plugins/ActivateByMouseHover/: ActivateByMouseHover.cs  ActivateByMouseHover.csproj  SettingForm.Designer.cs  SettingForm.cs
example_explorer_extensions/qttabbar-master/Plugins/CreateNewItem/: CreateNewItem.cs  CreateNewItem.csproj
example_explorer_extensions/qttabbar-master/Plugins/Memo/: Memo.cs  Memo.csproj  Resource.cs  Resource.resx
example_explorer_extensions/qttabbar-master/QTPluginLib/: CONSTANTS.cs  MenuType.cs  QTPluginLib.csproj
example_explorer_extensions/qttabbar-master/QTTabBar/: ClassDiagram1.cd  Config.cs  Constants.cs  ExtendedItemsView.cs  ExtendedSysListView32.cs  FileHashComputerForm.cs  InstanceManager.cs  PluginServer.cs  QTButtonBar.cs  QTDesktopTool.cs  QTTabBar.csproj  QTTabBarClass.cs  QTUtility.cs  QTUtility2.cs  QTabControl.cs  QTabItem.cs  RebarController.cs  Resource_String_zh_CN.resx  Resources_String.resx  Resources_String_de_DE.resx  ShellColors.cs  StaticReg.cs  ThumbnailTooltipForm.cs  UpdateChecker.cs  todo.txt
example_explorer_extensions/qttabbar-master/SetHome/: SetHome.cs  SetHome.csproj  SetHomeForm.cs
example_explorer_extensions/stexbar-master/SKTimeStamp/: default.build.user.tmpl
example_explorer_extensions/stexbar-master/StExBar/: StExBar.sln  default.build.user.tmpl  version.build.in
example_explorer_extensions/stexbar-master/www/: .jshintrc  Readme.md  package.json
example_explorer_extensions/windows-shell-extension-column-master/: MD5ColumnHandler.cs  MD5ColumnHandler.csproj  MD5ColumnHandler.sln  ShellLib.cs  desktop.ini
include/: BackgroundCache.h  BreadcrumbGradient.h  BrowserEvents.h  CExplorerBHO.h  ClassFactory.h  ColorSerialization.h  ColorUtils.h  ComUtils.h  ComVTableHook.h  CommonDialogColorizer.h  CompositionIntercept.h  CustomFileListView.h  DirectUIReplacementIntegration.h  DirectUiHooks.h  DpiUtils.h  EditGradientRenderer.h  ExplorerGlowSurfaces.h  ExplorerPane.h  ExplorerRibbonHook.h  ExplorerThemeUtils.h  ExplorerWindowHook.h  FileColorOverrides.h  FolderViewColorizer.h  FtpClient.h  FtpPidl.h  FtpShellFolder.h  GitStatus.h  GlowRenderer.h  GroupStore.h  Guids.h  IconCache.h  Logging.h  Messages.h  MinHookSupport.h  Module.h  NameColorProvider.h  NamespaceTreeColorizer.h  Notifications.h  OpenFolderCommand.h  OptionsDialog.h  (+18 more)
registration/: CExplorerBHO.rgs  ShellTabs.rgs
scripts/: fileExplorerDumper.py
scripts/explorer_gui_dump_10-31-2025_175158/: explorer_19236_modules.json  explorer_19236_modules.txt  explorer_19236_msaa_hwnd_10168968.txt  explorer_19236_msaa_hwnd_1378574.txt  explorer_19236_msaa_hwnd_273026750.txt  explorer_19236_msaa_hwnd_30082884.txt  explorer_19236_msaa_hwnd_4327664.txt  explorer_19236_msaa_hwnd_5835146.txt  explorer_19236_msaa_hwnd_5973768.txt  explorer_19236_msaa_hwnd_63113086.txt  explorer_19236_msaa_hwnd_7997664.txt  explorer_19236_proc_map.json  explorer_19236_process_info.json  explorer_19236_registry_shellext_hints.json  explorer_19236_windows.json  explorer_19236_windows.txt  meta.json  summary.json
src/: BackgroundCache.cpp  BreadcrumbGradient.cpp  BrowserEvents.cpp  CExplorerBHO.cpp  ClassFactory.cpp  ColorSerialization.cpp  ColorUtils.cpp  ComUtils.cpp  ComVTableHook.cpp  CommonDialogColorizer.cpp  CompositionIntercept.cpp  CustomFileListView.cpp  CustomRibbonTab.xml  DirectUIReplacementIntegration.cpp  DirectUiHooks.cpp  DpiUtils.cpp  EditGradientRenderer.cpp  ExplorerGlowSurfaces.cpp  ExplorerPane.cpp  ExplorerRibbonHook.cpp  ExplorerThemeUtils.cpp  ExplorerWindowHook.cpp  FileColorOverrides.cpp  FolderViewColorizer.cpp  FtpClient.cpp  FtpPidl.cpp  FtpShellFolder.cpp  FtpUrl.cpp  GitStatus.cpp  GlowRenderer.cpp  GroupStore.cpp  Guids.cpp  IconCache.cpp  Logging.cpp  MinHookSupport.cpp  Module.cpp  NameColorProvider.cpp  NamespaceTreeColorizer.cpp  Notifications.cpp  OpenFolderCommand.cpp  (+29 more)
src/ribbon_images/: README.md
tests/: ColorSerializationTests.cpp  GuardExplorerCallTests.cpp  IconCacheStressTests.cpp  IconCacheTestStubs.cpp  PaneHooksTests.cpp  SessionStoreRecoveryTests.cpp  TabBandWindowDiffTests.cpp  TabManagerWindowTests.cpp  TestLoggingStubs.cpp  ThemeTransitionTests.cpp  UtilitiesFtpTests.cpp  UtilitiesGuardTests.cpp
(+93 files in other folders)
